--- a/package.json
+++ b/package.json
@@ -23,12 +23,20 @@
   },
   "homepage": "https://github.com/spudly/talk-like-a-pirate",
   "devDependencies": {
-    "@spudly/eslint-config": "^0.1.0",
+    "@spudly/eslint-config": "^0.1.1",
     "browserify": "^13.0.1",
     "chai": "^3.5.0",
     "mocha": "^2.0.1",
     "semantic-release": "^4.3.5",
-    "sinon": "^1.11.1"
+    "sinon": "^1.11.1",
+    "babel-eslint": "^6.1.2",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-ava": "^2.5.0",
+    "eslint-plugin-import": "^1.11.1",
+    "eslint-plugin-jsx-a11y": "^1.5.5",
+    "eslint-plugin-lodash-fp": "^1.3.0",
+    "eslint-plugin-react": "^5.2.2"
   },
   "files": [
     "index.js",
