sourceType -> parserOptions.sourceType

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   ],
   "eslintConfig": {
     "extends": "@spudly",
-    "sourceType": "script"
+    "parserOptions": {
+      "sourceType": "script"
+    }
   }
 }
